dinamyc xlsx and optimized